--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -70,8 +70,9 @@
 <li><a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>: &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1072; &#1085;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1086;&#1090;&#1085;&#1086;&#1096;&#1077;&#1085;&#1080;&#1103;&#1090;&#1072; &#1084;&#1077;&#1078;&#1076;&#1091; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1095;&#1088;&#1077;&#1079; &#1075;&#1088;&#1072;&#1092;&#1080;&#1082;&#1072;.</li></ul>
 <p>&#1057; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;, &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1074;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080; &#1080; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1077;&#1076;&#1085;&#1072; &#1086;&#1090; &#1085;&#1072;&#1081;-&#1075;&#1086;&#1088;&#1085;&#1080;&#1090;&#1077; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1080;&#1083;&#1080; &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;, <b>View &rarr; Panels</b>.
 </p><p>&#1047;&#1072; &#1076;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1090;&#1077; &#1080; &#1076;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1090;&#1077; &#1083;&#1077;&#1085;&#1090;&#1072;&#1090;&#1072; &#1085;&#1072; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077;&#1090;&#1086;, &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1081;&#1090;&#1077; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;, <b>View &rarr; Status bar</b>.
+</p><p><span id="Other"></span>
 </p>
-<h3><span class="mw-headline" id="Other">Other</span></h3>
+<h3><span id=".D0.94.D1.80.D1.83.D0.B3.D0.B8"></span><span class="mw-headline" id="&#1044;&#1088;&#1091;&#1075;&#1080;">&#1044;&#1088;&#1091;&#1075;&#1080;</span></h3>
 <p>Other useful interfaces and windows include:
 </p>
 <ul><li><a href="../Std_SceneInspector.html" title="Std SceneInspector">Scene inspector</a>: a panel that shows the Coin3D nodes that make up the <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a>. For power users and developers, it may be useful to troubleshoot operations that manipulate the scene directly, and the objects created in the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
@@ -128,13 +129,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117091847
+Cached time: 20260117091904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 353/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.086 seconds
+Preprocessor visited node count: 354/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -144,18 +145,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.727      1 -total
- 24.80%    5.636      1 Template:Interface_navi/bg
- 21.90%    4.977      1 Template:Userdocnavi/bg
- 18.16%    4.127      7 Template:StdMenu
- 14.75%    3.352      2 Template:Navigation_menu_2
- 10.89%    2.475      1 Template:Caption
-  8.83%    2.007      1 Template:Version
-  8.55%    1.943     20 Template:MenuCommand
-  5.52%    1.255      1 Template:TOCright
+100.00%   15.313      1 -total
+ 26.81%    4.106      1 Template:Interface_navi/bg
+ 23.49%    3.597      1 Template:Userdocnavi/bg
+ 16.88%    2.585      7 Template:StdMenu
+ 15.59%    2.388      2 Template:Navigation_menu_2
+  9.72%    1.488     20 Template:MenuCommand
+  8.33%    1.276      1 Template:Caption
+  7.92%    1.213      1 Template:TOCright
+  7.12%    1.090      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117091847 and revision id 1739377. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117091904 and revision id 1739379. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
