--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -77,7 +77,9 @@
 </p>
 <ul><li><a href="../Std_SceneInspector.html" title="Std SceneInspector">Scene inspector</a>: &#1087;&#1072;&#1085;&#1077;&#1083;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; Coin3D &#1074;&#1098;&#1079;&#1083;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072;&#1090; <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a>. &#1047;&#1072; &#1085;&#1072;&#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1083;&#1080;&#1090;&#1077; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; &#1080; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1095;&#1080;&#1094;&#1080;&#1090;&#1077; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1077; &#1087;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086; &#1076;&#1072; &#1086;&#1090;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1090; &#1085;&#1077;&#1080;&#1079;&#1087;&#1088;&#1072;&#1074;&#1085;&#1086;&#1089;&#1090;&#1080; &#1074; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1072;&#1085;&#1080;&#1087;&#1091;&#1083;&#1080;&#1088;&#1072;&#1090; &#1089;&#1094;&#1077;&#1085;&#1072;&#1090;&#1072; &#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1074; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> &#1076;&#1080;&#1088;&#1077;&#1082;&#1090;&#1085;&#1086;.</li>
 <li><a href="../Std_DependencyGraph.html" title="Std DependencyGraph">Dependency graph</a>: &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;, &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1097; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1086; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1089; &#1087;&#1086;&#1084;&#1086;&#1097;&#1085;&#1072;&#1090;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072; <a rel="nofollow" class="external text" href="https://graphviz.org/">Graphviz</a>. &#1055;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086; &#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1087;&#1086;&#1079;&#1085;&#1072;&#1103;&#1090; &#1087;&#1088;&#1086;&#1073;&#1083;&#1077;&#1084;&#1080; &#1087;&#1088;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1072;&#1090;&#1086; &#1082;&#1088;&#1098;&#1075;&#1086;&#1074;&#1080; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1085;&#1077; &#1089;&#1072; &#1085;&#1072;&#1087;&#1098;&#1083;&#1085;&#1086; &#1086;&#1095;&#1077;&#1074;&#1080;&#1076;&#1085;&#1080; &#1086;&#1090; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a> &#1080;&#1083;&#1080; &#1086;&#1090; <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>.</li></ul>
-<h3><span class="mw-headline" id="Customization">Customization</span></h3>
+<p><span id="Customization"></span>
+</p>
+<h3><span id=".D0.9F.D0.B5.D1.80.D1.81.D0.BE.D0.BD.D0.B0.D0.BB.D0.B8.D0.B7.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <p>Toolbars can have more or fewer buttons, and custom toolbars can be created with a mix of different tools, and to store developed macros.
 </p><p>These options are in the menu, <b>Tools &rarr; Customize</b>. See <a href="../Interface_Customization.html" title="Interface Customization">interface customization</a>.
 </p>
@@ -129,13 +131,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117092432
+Cached time: 20260117092448
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 354/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.177 seconds
+Preprocessor visited node count: 355/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -145,18 +147,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.999      1 -total
- 23.75%    4.513      1 Template:Interface_navi/bg
- 19.93%    3.787      1 Template:Userdocnavi/bg
- 18.52%    3.519      7 Template:StdMenu
- 15.76%    2.995      2 Template:Navigation_menu_2
- 12.52%    2.378      1 Template:Caption
- 10.91%    2.074     20 Template:MenuCommand
-  8.40%    1.596      1 Template:TOCright
-  7.68%    1.459      1 Template:Version
+100.00%   40.028      1 -total
+ 40.64%   16.268      1 Template:Interface_navi/bg
+ 18.86%    7.548      1 Template:Userdocnavi/bg
+ 13.16%    5.267      2 Template:Navigation_menu_2
+ 10.72%    4.293      1 Template:Version
+  9.27%    3.711      1 Template:TOCright
+  9.00%    3.604      7 Template:StdMenu
+  6.89%    2.759      1 Template:Caption
+  5.26%    2.105     20 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092431 and revision id 1739381. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092448 and revision id 1739383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
