--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -81,7 +81,7 @@
 </p>
 <h3><span id=".D0.9F.D0.B5.D1.80.D1.81.D0.BE.D0.BD.D0.B0.D0.BB.D0.B8.D0.B7.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <p>&#1051;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1083;&#1080; &#1087;&#1086;-&#1084;&#1072;&#1083;&#1082;&#1086; &#1073;&#1091;&#1090;&#1086;&#1085;&#1080;, &#1072; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1089; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1076;&#1072; &#1089;&#1098;&#1093;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1090; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085;&#1080; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;.
-</p><p>These options are in the menu, <b>Tools &rarr; Customize</b>. See <a href="../Interface_Customization.html" title="Interface Customization">interface customization</a>.
+</p><p>&#1058;&#1077;&#1079;&#1080; &#1086;&#1087;&#1094;&#1080;&#1080; &#1080;&#1084;&#1072; &#1074; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;, <b>Tools &rarr; Customize</b>. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Interface_Customization.html" title="Interface Customization">interface customization</a>.
 </p>
 <h2><span class="mw-headline" id="Dock_panel_overlay">Dock panel overlay</span></h2>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -131,12 +131,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117092519
+Cached time: 20260117092556
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 355/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -147,18 +147,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.078      1 -total
- 26.36%    7.401      1 Template:Userdocnavi/bg
- 19.57%    5.495      1 Template:Interface_navi/bg
- 16.11%    4.522      1 Template:TOCright
- 15.91%    4.467      2 Template:Navigation_menu_2
- 14.39%    4.042      7 Template:StdMenu
-  9.95%    2.795      1 Template:Caption
-  7.30%    2.050     20 Template:MenuCommand
-  6.09%    1.709      1 Template:Version
+100.00%   19.574      1 -total
+ 31.82%    6.228      1 Template:Interface_navi/bg
+ 21.84%    4.275      1 Template:Userdocnavi/bg
+ 15.51%    3.035      7 Template:StdMenu
+ 14.50%    2.839      2 Template:Navigation_menu_2
+  8.99%    1.759     20 Template:MenuCommand
+  8.30%    1.625      1 Template:TOCright
+  7.49%    1.467      1 Template:Caption
+  7.07%    1.384      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092519 and revision id 1739385. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092556 and revision id 1739387. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
