--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -82,8 +82,9 @@
 <h3><span id=".D0.9F.D0.B5.D1.80.D1.81.D0.BE.D0.BD.D0.B0.D0.BB.D0.B8.D0.B7.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <p>&#1051;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1083;&#1080; &#1087;&#1086;-&#1084;&#1072;&#1083;&#1082;&#1086; &#1073;&#1091;&#1090;&#1086;&#1085;&#1080;, &#1072; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1089; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1076;&#1072; &#1089;&#1098;&#1093;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1090; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085;&#1080; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;.
 </p><p>&#1058;&#1077;&#1079;&#1080; &#1086;&#1087;&#1094;&#1080;&#1080; &#1080;&#1084;&#1072; &#1074; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;, <b>Tools &rarr; Customize</b>. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Interface_Customization.html" title="Interface Customization">interface customization</a>.
+</p><p><span id="Dock_panel_overlay"></span>
 </p>
-<h2><span class="mw-headline" id="Dock_panel_overlay">Dock panel overlay</span></h2>
+<h2><span id=".D0.97.D0.B0.D0.BA.D0.BE.D1.82.D0.B2.D1.8F.D0.BD.D0.B5_.D0.B8_.D0.BF.D1.80.D0.B5.D0.BF.D0.BE.D0.BA.D1.80.D0.B8.D0.B2.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1047;&#1072;&#1082;&#1086;&#1090;&#1074;&#1103;&#1085;&#1077;_&#1080;_&#1087;&#1088;&#1077;&#1087;&#1086;&#1082;&#1088;&#1080;&#1074;&#1072;&#1085;&#1077;">&#1047;&#1072;&#1082;&#1086;&#1090;&#1074;&#1103;&#1085;&#1077; &#1080; &#1087;&#1088;&#1077;&#1087;&#1086;&#1082;&#1088;&#1080;&#1074;&#1072;&#1085;&#1077;</span></h2>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p>
 <figure class="mw-default-size" typeof="mw:File/Thumb"><a href="../index.php?title=Dock_Panel_Overlay.png&amp;filetimestamp=20250726040057&amp;.html" class="mw-file-description"><img alt="Dock panel overlay enabled, showing transparent and auto-hidden panels" src="../File/Dock_Panel_Overlay.png" decoding="async" width="300" height="171" class="mw-file-element" data-file-width="1850" data-file-height="1053"></a><figcaption>Dock panel overlay enabled, showing transparent and auto-hidden panels</figcaption></figure>
@@ -131,13 +132,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117092556
+Cached time: 20260117092847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.120 seconds
-Preprocessor visited node count: 355/1000000
+CPU time usage: 0.059 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 356/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -147,18 +148,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.574      1 -total
- 31.82%    6.228      1 Template:Interface_navi/bg
- 21.84%    4.275      1 Template:Userdocnavi/bg
- 15.51%    3.035      7 Template:StdMenu
- 14.50%    2.839      2 Template:Navigation_menu_2
-  8.99%    1.759     20 Template:MenuCommand
-  8.30%    1.625      1 Template:TOCright
-  7.49%    1.467      1 Template:Caption
-  7.07%    1.384      1 Template:Version
+100.00%   16.818      1 -total
+ 29.13%    4.899      1 Template:Interface_navi/bg
+ 22.01%    3.701      1 Template:Userdocnavi/bg
+ 18.26%    3.071      7 Template:StdMenu
+ 14.16%    2.381      2 Template:Navigation_menu_2
+  8.47%    1.424     20 Template:MenuCommand
+  7.62%    1.281      1 Template:Caption
+  7.31%    1.230      1 Template:TOCright
+  6.92%    1.164      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092556 and revision id 1739387. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117092847 and revision id 1739389. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
