--- a/wiki/fr/TechDraw_2PointCenterLine.html
+++ b/wiki/fr/TechDraw_2PointCenterLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2PointCenterLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2PointCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PunkteMittellinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2PointCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 punti (80% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwoma punktami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -74,7 +74,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<p>See <a href="../TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine">TechDraw FaceCenterLine</a>.
+<p>Voir <a href="../fr/TechDraw_FaceCenterLine.html#Remarques" title="TechDraw FaceCenterLine/fr">TechDraw Ligne centrale &agrave; une face</a>.
 </p><p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -126,34 +126,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117132729
+Cached time: 20260117132737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.176 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.115 seconds
 Preprocessor visited node count: 370/1000000
 Post&#8208;expand include size: 26084/2097152 bytes
 Template argument size: 10214/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1712/5000000 bytes
+Unstrip post&#8208;expand size: 1716/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.765      1 -total
- 25.72%    8.686      1 Template:TechDraw_Tools_navi/fr
- 25.30%    8.541      1 Template:Userdocnavi/fr
- 19.62%    6.626      2 Template:Navigation_menu_2
- 18.36%    6.198      1 Template:GuiCommand/fr
- 12.41%    4.191      2 Template:Docnav/fr
-  7.26%    2.452      1 Template:Caption
-  4.79%    1.619      2 Template:Button
-  3.79%    1.279      1 Template:MenuCommand
+100.00%   25.696      1 -total
+ 31.01%    7.969      2 Template:Navigation_menu_2
+ 30.44%    7.823      1 Template:TechDraw_Tools_navi/fr
+ 22.02%    5.659      1 Template:Userdocnavi/fr
+ 12.11%    3.113      1 Template:GuiCommand/fr
+ 12.01%    3.087      2 Template:Docnav/fr
+  7.60%    1.953      1 Template:Caption
+  6.14%    1.578      2 Template:Button
+  6.05%    1.554      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260117132728 and revision id 1739428. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260117132737 and revision id 1739430. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
