--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -80,10 +80,8 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'annotation h&eacute;rite de toutes les propri&eacute;t&eacute;s de base de la vue &agrave; l'exception de <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale</b>. Utilisez plut&ocirc;t la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>TextSize</b>.
+<p>L'annotation h&eacute;rite de toutes les propri&eacute;t&eacute;s de base de la vue &agrave; l'exception de <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale</b>. Utilisez plut&ocirc;t la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text Size</b>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text</b>: Le texte &agrave; afficher.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Font</b>: Le nom de la police &agrave; utiliser. L'annotation utilisera la meilleure correspondance des polices install&eacute;es.</li>
@@ -154,15 +152,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133738
+Cached time: 20260117133801
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 687/1000000
-Post&#8208;expand include size: 28781/2097152 bytes
-Template argument size: 10507/2097152 bytes
+CPU time usage: 0.122 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 700/1000000
+Post&#8208;expand include size: 28805/2097152 bytes
+Template argument size: 10509/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -170,19 +168,19 @@ Unstrip post&#8208;expand size: 2663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.079      1 -total
- 24.17%    8.478      1 Template:TechDraw_Tools_navi/fr
- 18.27%    6.407      9 Template:PropertyData/fr
- 16.46%    5.773      2 Template:Navigation_menu_2
- 11.74%    4.118      1 Template:Userdocnavi/fr
- 10.94%    3.837      1 Template:GuiCommand/fr
-  9.00%    3.157      9 Template:Variable
-  7.53%    2.642      2 Template:Docnav/fr
-  6.71%    2.354      1 Template:Code
-  4.99%    1.751      6 Template:Incode
+100.00%   51.132      1 -total
+ 25.22%   12.893      1 Template:TechDraw_Tools_navi/fr
+ 21.29%   10.884      2 Template:Navigation_menu_2
+ 11.48%    5.871      2 Template:PropertyData
+ 10.60%    5.419      1 Template:Userdocnavi/fr
+ 10.57%    5.404      7 Template:PropertyData/fr
+ 10.12%    5.175      9 Template:Variable
+  9.03%    4.618      1 Template:GuiCommand/fr
+  5.96%    3.046      2 Template:Docnav/fr
+  5.94%    3.036      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133737 and revision id 1739450. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133801 and revision id 1739452. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
