--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -82,15 +82,13 @@
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
 <p>L'annotation h&eacute;rite de toutes les propri&eacute;t&eacute;s de base de la vue &agrave; l'exception de <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale</b>. Utilisez plut&ocirc;t la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text Size</b>.
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text</b>: Le texte &agrave; afficher.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Font</b>: Le nom de la police &agrave; utiliser. L'annotation utilisera la meilleure correspondance des polices install&eacute;es.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>TextColor</b>: La couleur du texte</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>TextSize</b>: La taille du texte en mm.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>MaxWidth</b>: La largeur maximale du bloc d'annotation. -1 indique pas de largeur maximale.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>LineSpace</b>: Ajustement d'interligne (%).</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>TextStyle</b>: "Normal", "Gras", "Italique", "Gras-Italique"</li></ul>
-</div>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text</b>&nbsp;: texte &agrave; afficher.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Font</b>&nbsp;: nom de la police &agrave; utiliser. L'annotation utilisera la meilleure correspondance des polices install&eacute;es.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text Color</b>&nbsp;: couleur du texte</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text Size</b>&nbsp;: taille du texte en mm.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Max Width</b>&nbsp;: largeur maximale du bloc d'annotation. -1 indique pas de largeur maximale.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Line Space</b>: ajustement des interlignes (%).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Text Style</b>: &laquo;&nbsp;Normal&nbsp;&raquo;, &laquo;&nbsp;Gras&nbsp;&raquo;, &laquo;&nbsp;Italique&nbsp;&raquo;, &laquo;&nbsp;Gras-Italique&nbsp;&raquo;</li></ul>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -152,35 +150,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133801
+Cached time: 20260117134353
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 700/1000000
-Post&#8208;expand include size: 28805/2097152 bytes
-Template argument size: 10509/2097152 bytes
-Highest expansion depth: 8/100
+CPU time usage: 0.095 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 748/1000000
+Post&#8208;expand include size: 28892/2097152 bytes
+Template argument size: 10519/2097152 bytes
+Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 2663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.132      1 -total
- 25.22%   12.893      1 Template:TechDraw_Tools_navi/fr
- 21.29%   10.884      2 Template:Navigation_menu_2
- 11.48%    5.871      2 Template:PropertyData
- 10.60%    5.419      1 Template:Userdocnavi/fr
- 10.57%    5.404      7 Template:PropertyData/fr
- 10.12%    5.175      9 Template:Variable
-  9.03%    4.618      1 Template:GuiCommand/fr
-  5.96%    3.046      2 Template:Docnav/fr
-  5.94%    3.036      1 Template:Code
+100.00%   33.343      1 -total
+ 24.44%    8.149      1 Template:TechDraw_Tools_navi/fr
+ 19.31%    6.438      9 Template:PropertyData
+ 15.58%    5.194      2 Template:Navigation_menu_2
+ 12.94%    4.315      9 Template:Variable
+  8.67%    2.892      1 Template:Userdocnavi/fr
+  7.76%    2.586      2 Template:Docnav/fr
+  7.64%    2.547      1 Template:GuiCommand/fr
+  7.63%    2.544      1 Template:Code
+  6.34%    2.113      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133801 and revision id 1739452. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117134353 and revision id 1739454. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
