--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -53,7 +53,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Annotation</b> ajoute un bloc de texte &agrave; une feuille de dessin.
+<p>L'outil <b>TechDraw Annotation texte enrichi</b> ajoute un bloc de texte &agrave; une feuille de dessin.
 </p><p><span typeof="mw:File"><a href="../index.php?title=AnnotationSample.png&amp;filetimestamp=20160826145120&amp;.html" class="mw-file-description"><img src="../File/AnnotationSample.png" decoding="async" width="250" height="105" class="mw-file-element" data-file-width="279" data-file-height="117"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Annotation dans la feuille de dessin</p>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117134431
+Cached time: 20260117134444
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.105 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.153 seconds
 Preprocessor visited node count: 747/1000000
 Post&#8208;expand include size: 28892/2097152 bytes
 Template argument size: 10519/2097152 bytes
@@ -163,19 +163,19 @@ Unstrip post&#8208;expand size: 2667/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.886      1 -total
- 23.66%    7.071      1 Template:TechDraw_Tools_navi/fr
- 18.97%    5.670      2 Template:Navigation_menu_2
- 16.26%    4.858      9 Template:PropertyData
- 12.96%    3.874      1 Template:Userdocnavi/fr
- 10.02%    2.994      9 Template:Variable
-  8.55%    2.554      1 Template:GuiCommand/fr
-  7.15%    2.137      2 Template:Docnav/fr
-  6.78%    2.026      6 Template:Incode
-  6.37%    1.905      1 Template:Code
+100.00%   39.928      1 -total
+ 22.06%    8.809      1 Template:TechDraw_Tools_navi/fr
+ 17.76%    7.093      9 Template:PropertyData
+ 14.71%    5.875      2 Template:Navigation_menu_2
+ 12.05%    4.812      1 Template:Userdocnavi/fr
+ 11.78%    4.702      9 Template:Variable
+  9.99%    3.989      2 Template:Docnav/fr
+  9.62%    3.840      1 Template:GuiCommand/fr
+  6.02%    2.402      6 Template:Incode
+  5.83%    2.329      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117134431 and revision id 1739456. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117134444 and revision id 1739458. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
